--- a/nbs/client/core.ipynb
+++ b/nbs/client/core.ipynb
@@ -6,7 +6,20 @@
    "source": [
     "# core\n",
     "\n",
-    "> Fill in a module description here\n"
+    "> Base classes and routes for authentication, and dealing with api responses.\n",
+    "\n",
+    "- `DomoAuth` encapsulates authentication.  Can init with username/password or access_token\n",
+    "- For consistency, use `domo_api_request` to handle API requests in route functions.  `domo_api_requests` and `route functions` should always return an instance of `ResponseGetData` class.  For streaming responses, use `domo_api_stream_request` to automagically download API responses in route functions.\n",
+    "- `Route Functions` should always throw an error if not `ResponseGetData.is_success`\n",
+    "\n",
+    "Features or classes are implemented as separate notebooks and then exported into their own module folder (see `default_exp` line in each .ipynb file)\n",
+    "- each feature should be implemented as series of route functions ('GET', 'PUT', 'POST' requests), then a `@dataclass` class may be used to represent the feature with methods that wrap and provide logic around route functions.\n",
+    "    - ex. an UPSERT method might wrap logic to test if the entity already exists (in which case call the PUT route) or create the entity if it doesn't already exist ('POST')\n",
+    "- `@classmethods` return an instance of the class\n",
+    "    - ex. each class should have a `get_by_id` method which returns an instance of the entity (typically the result of the search datacenter API)\n",
+    "\n",
+    "Implementations, take a set of features and create a use case or project\n",
+    "    - ex.back up code engine and custom app (features) into appdb collections (feature)"
    ]
   },
   {
@@ -86,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +193,9 @@
     "            \"generate_request_headers: unable to authenticate request with provided Auth\"\n",
     "        )\n",
     "\n",
-    "    def who_am_i(self):\n",
+    "    def who_am_i(self, return_raw: bool = False):\n",
+    "        \"\"\"identify which credentials are being used in this Auth Object (useful for access_token based authentication)\"\"\"\n",
+    "\n",
     "        url = f\"https://{self.domo_instance}.domo.com/api/content/v2/users/me\"\n",
     "\n",
     "        res = json.loads(\n",
@@ -189,7 +204,10 @@
     "            ).text\n",
     "        )\n",
     "\n",
-    "        self.username = res[\"userName\"]\n",
+    "        if return_raw:\n",
+    "            return res\n",
+    "\n",
+    "        self.username = res[\"emailAddress\"]\n",
     "\n",
     "        return res"
    ]
@@ -203,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -211,16 +229,16 @@
      "output_type": "stream",
      "text": [
       "*** Using Access Token Auth\n",
-      "{'id': 1893952720, 'invitorUserId': 587894148, 'displayName': 'Jae Wilson1', 'department': 'Business Improvement', 'userName': 'jae@onyxreporting.com', 'emailAddress': 'jae@datacrew.space', 'avatarKey': 'c605f478-0cd2-4451-9fd4-d82090b71e66', 'accepted': True, 'userType': 'USER', 'modified': 1719938427453, 'created': 1588960518, 'active': True, 'pending': False, 'anonymous': False, 'systemUser': False}\n"
+      "{'id': 1893952720, 'invitorUserId': 587894148, 'displayName': 'Jae Wilson1', 'department': 'Business Improvement', 'userName': 'jae@onyxreporting.com', 'emailAddress': 'jae@datacrew.space', 'avatarKey': 'c605f478-0cd2-4451-9fd4-d82090b71e66', 'accepted': True, 'userType': 'USER', 'modified': 1721264727737, 'created': 1588960518, 'active': True, 'pending': False, 'anonymous': False, 'systemUser': False}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "DomoAuth(domo_instance='domo-community', username='jae@onyxreporting.com')"
+       "DomoAuth(domo_instance='domo-community', username='jae@datacrew.space')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +249,7 @@
     "    access_token=os.environ[\"DOMO_ACCESS_TOKEN\"],\n",
     ")\n",
     "\n",
-    "print(auth.who_am_i())\n",
+    "print(auth.who_am_i(return_raw= False))\n",
     "auth"
    ]
   },
