--- a/nbs/implementation/monitoring.ipynb
+++ b/nbs/implementation/monitoring.ipynb
@@ -10,6 +10,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Monitoring Source Code Project\n",
+    "\n",
+    "This implementation wraps `feature.codeengine` and `feature.enterprise_apps` to sync user generated code to an appdb collection\n",
+    "\n",
+    "- [x] - implement a class `DocumentSource` for capturing source code.\n",
+    "    - [x] classmethod for creating `DocumentSource.from_codeengine_package_version`\n",
+    "        - retrieves most recent version of codeengine package\n",
+    "    \n",
+    "    - [x] classmethod for creating `DocumentSource.from_source_file` \n",
+    "        - [] workflow for enterprise apps? - one enterprise app can have multiple source_files.  Will need to consider how to structure documents in collection.  \n",
+    "            - in this sample implementation apps shared with the user will be downloaded to the folder TEST\n",
+    "            - [] create workflow for auto sharing all content with the user\n",
+    "            \n",
+    "        - [] workflow for jupyter notebooks? - currently cannot properly automate as unable to retrieve content from jupyter workspaces without the authentication token which must be scraped from the UI\n",
+    "    \n",
+    "- [] - write to AppDb Collection\n",
+    "    - Not started yet \n",
+    "        \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -83,6 +107,7 @@
     "\n",
     "\n",
     "class SourceCode_Enum:\n",
+    "    \"\"\"captures metadata about where source came from\"\"\"\n",
     "    CODE_ENGINE = \"Code Engine\"\n",
     "    ENTERPRISE_APP = \"Enterprise App\"\n",
     "\n",
