--- a/nbs/feature/codeengine.ipynb
+++ b/nbs/feature/codeengine.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
+    "import nbdev\n",
     "import os\n",
     "from pprint import pprint"
    ]
@@ -372,34 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
-    "\n",
-    "import nbdev\n",
     "nbdev.nbdev_export('./codeengine.ipynb')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   }
  },
  "nbformat": 4,
