--- a/nbs/feature/users.ipynb
+++ b/nbs/feature/users.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Users\n",
+    "\n",
+    "- [ ] - get_users() route implemented without loop.  default limit is 50. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
+    "import nbdev\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,10 +57,10 @@
     {
      "data": {
       "text/plain": [
-       "DomoAuth(domo_instance='datacrew-space', username=None)"
+       "DomoAuth(domo_instance='domo-community', username=None)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +89,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def get_users(auth : dmda.DomoAuth , debug_api: bool = False):\n",
+    "\n",
+    "    endpoint = f\"/api/content/v3/users/\"\n",
+    "\n",
+    "    params = {\"includeDetails\": True}\n",
+    "\n",
+    "    res = dmda.domo_api_request(\n",
+    "        auth= auth,\n",
+    "        endpoint=endpoint,\n",
+    "        request_type= \"GET\",\n",
+    "        params = params,\n",
+    "        debug_api= debug_api,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    if not res.is_success and res.status == 404 :\n",
+    "        raise User_API_Exception(res, message = f\"unable to find user - {user_id}\")\n",
+    "\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 1216550715,\n",
+       " 'invitorUserId': 1893952720,\n",
+       " 'displayName': '8:26 - go to sleep',\n",
+       " 'role': 'Privileged',\n",
+       " 'roleId': 2,\n",
+       " 'detail': {'email': 'test4@domo.com',\n",
+       "  'phoneNumber': '152',\n",
+       "  'pending': True,\n",
+       "  'active': True,\n",
+       "  'created': 1664938821,\n",
+       "  'modified': 1718758313,\n",
+       "  'department': 'test'}}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res =get_users( auth =auth, debug_api = False)\n",
+    "\n",
+    "print(len(res.response))\n",
+    "user = res.response[0]\n",
+    "user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,27 +189,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ResponseGetData(response={'id': 1351541814, 'invitorUserId': 27, 'displayName': 'jae wilson', 'role': 'Admin', 'roleId': 1, 'detail': {'title': 'Staff Analytics Engineer', 'email': 'jae@datacrew.space', 'phoneNumber': '8087651506', 'pending': False, 'active': True, 'created': 1713890872, 'modified': 1713890922, 'department': 'IT/Engineering'}}, is_success=True, status=200, auth=DomoAuth(domo_instance='datacrew-space', username=None))"
+       "{'id': 1216550715,\n",
+       " 'invitorUserId': 1893952720,\n",
+       " 'displayName': '8:26 - go to sleep',\n",
+       " 'role': 'Privileged',\n",
+       " 'roleId': 2,\n",
+       " 'detail': {'email': 'test4@domo.com',\n",
+       "  'phoneNumber': '152',\n",
+       "  'pending': True,\n",
+       "  'active': True,\n",
+       "  'created': 1664938821,\n",
+       "  'modified': 1718758313,\n",
+       "  'department': 'test'}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_user_by_id(user_id = 1351541814, auth =auth, debug_api = False)\n"
+    "(get_user_by_id(user_id = user['id'], auth =auth, debug_api = False)).response\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,54 +256,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DomoUser(id=1351541814, display_name='jae wilson', role_id=1, email='jae@datacrew.space')"
+       "DomoUser(id=1216550715, display_name='8:26 - go to sleep', role_id=2, email='test4@domo.com')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DomoUser.get_by_id(user_id= 1351541814, auth = auth)"
+    "DomoUser.get_by_id(user_id= user['id'], auth = auth)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
     "\n",
-    "import nbdev\n",
+    "\n",
     "nbdev.nbdev_export()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   }
  },
  "nbformat": 4,
