--- a/nbs/implementation/monitoring.ipynb
+++ b/nbs/implementation/monitoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
+    "import nbdev\n",
+    "\n",
     "import os\n",
     "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +86,7 @@
        "DomoAuth(domo_instance='domo-community', username=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +434,7 @@
        "[ResponseGetData(response=['00_card.html', '00_domoauth.html', '01_deck.html', '03_snake.html', 'base.html', 'blog', 'card.html', 'deck.html', 'index.html', 'listings.json', 'manifest.json', 'nbdevdocumentation', 'robots.txt', 'search.json', 'sitemap.xml', 'site_libs', 'snake.html', 'styles.css', 'thumbnail.png', 'thumbnail.png.jpg', '_package.zip'], is_success=True, status=200)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +540,7 @@
        " DocumentSource(environment='Code Engine', id='ecee4443-6d40-4bd1-9fe3-1b7cb1ad3b1f', name='Ellibot', design_id='ecee4443-6d40-4bd1-9fe3-1b7cb1ad3b1f', design_name='Ellibot', log_dt=datetime.datetime(2024, 7, 22, 11, 46, 22, 667609), code=\"function myFunction() {\\n  console.log('Hello World!', param);\\n}\\n\\nmodule.exports.myFunction = myFunction;\", version='1.0.0', last_modified_dt='2023-12-20T16:40:04.512Z', domo_instance='domo-community', owner=DomoUser(id=68216396, display_name='Elliott Leonard', role_id=1, email='egleonard88@gmail.com'))]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +562,7 @@
        "DocumentSource(environment='Code Engine', id='3b8f8181-fdbb-4948-b0c4-d6d27ff991d3', name='Hugging Face', design_id='3b8f8181-fdbb-4948-b0c4-d6d27ff991d3', design_name='Hugging Face', log_dt=datetime.datetime(2024, 7, 22, 11, 46, 22, 667609), code='from transformers import GPT2LMHeadModel, GPT2Tokenizer\\nimport torch\\n\\ndef generate_text(input_text: str) -> str:\\n    \"\"\"\\n    Generate text using the GPT-2 model based on input text.\\n\\n    Args:\\n    input_text (str): Input text to seed the text generation.\\n\\n    Returns:\\n    str: Generated text based on the input.\\n    \"\"\"\\n    # Load the model and tokenizer\\n    model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\\n    tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\\n\\n    # Encode the input text\\n    input_ids = tokenizer.encode(input_text, return_tensors=\"pt\")\\n\\n    # Generate text using the model\\n    output = model.generate(\\n        input_ids,\\n        max_length=100,\\n        num_return_sequences=1,\\n        pad_token_id=tokenizer.eos_token_id\\n    )\\n\\n    # Decode the output\\n    decoded_output = tokenizer.decode(output[0], skip_special_tokens=True)\\n\\n    return decoded_output\\n\\n\\n    return decoded_output\\n\\n# Example usage of the function\\ninput_text = \"Hello, what is today\\'s date?\"\\nresult = generate_text(input_text)\\nprint(result)\\n', version='1.0.0', last_modified_dt='2024-07-20T12:14:01.139Z', domo_instance='domo-community', owner=DomoUser(id=1728973208, display_name='Peter Shull', role_id=2097317660, email='shullp05@gmail.com'))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +592,7 @@
        " 'owner': DomoUser(id=1728973208, display_name='Peter Shull', role_id=2097317660, email='shullp05@gmail.com')}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,34 +603,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
     "\n",
-    "import nbdev\n",
+    "\n",
     "nbdev.nbdev_export('./monitoring.ipynb')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   }
  },
  "nbformat": 4,
